Fix broken link

--- a/templates/index.html
+++ b/templates/index.html
@@ -186,7 +186,7 @@
               <br>
               <h2>Want to explore the data already stored in the Core Arken Cluster?</h2>
               <p>
-                Checkout the  <a href='github.com/arkenproject/core-keyset'><b>Core Keyset</b></a>, open up a keyset file to explore the File IDs contained within.
+                Checkout the  <a href='https://github.com/arkenproject/core-keyset'><b>Core Keyset</b></a>, open up a keyset file to explore the File IDs contained within.
                 To view the file in your browser or download it you can then paste the link to the Arken to Web Link like so.</p>
                 <pre class="highlight"><code>https://link.arken.io/ipfs/REPLACE-ME-WITH-FILE-ID</code></pre>
               </p>        
