--- a/templates/docs/upload.html
+++ b/templates/docs/upload.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-  <meta name="description" content="Meet Arken, A Decentralized Archival Cluster for the World's most Important Data." />
+  <meta name="description" content="Meet Arken, A Distributed Archival Cluster for the World's most Important Data." />
 
   <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
