Switch from ArkenProject to Arken

--- a/templates/docs/upload.html
+++ b/templates/docs/upload.html
@@ -120,7 +120,7 @@
                     If you're familiar with how GitHub works, submissions to the Core Arken Cluster are done through Pull Requests.
                     If you're not familiar with GitHub no worries, we'll walk you through it. 
                     To prevent anyone/everyone from being able to upload to the Core Arken Cluster 
-                    we handle uploads through application submissions to the <a href='https://github.com/arkenproject/core-keyset'><b>Core-Keyset</b></a> repository.                    <br>
+                    we handle uploads through application submissions to the <a href='https://github.com/arken/core-keyset'><b>Core-Keyset</b></a> repository.                    <br>
                     <br>
                     <b>To write an application you'll need:</b>
                     <br> 
@@ -178,7 +178,7 @@
                     WSL please follow the Linux instructions for installing AIT.)
                     <br>
                     <br>
-                    <a href= "https://github.com/arkenproject/ait/releases/"><b>AIT Releases</b></a>
+                    <a href= "https://github.com/arken/ait/releases/"><b>AIT Releases</b></a>
                     <br>
                     <br>
                     Now open the terminal on your computer.
@@ -220,7 +220,7 @@
                   <br>
                   <br>
                   <p>
-                    If you're uploading to the Core Arken Cluster <a href= "https://github.com/arkenproject/ait#tutorial"><b>click here</b></a> to 
+                    If you're uploading to the Core Arken Cluster <a href= "https://github.com/arken/ait#tutorial"><b>click here</b></a> to 
                     checkout the AIT tutorial on uploading your data to the Core Arken Cluster.
                   </p>
                 </p></span>
