Fix Dockerhub Link

--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
                 <hr />
                 <li><b>Gitub:</b> <a href="https://github.com/arken/arken">arken/arken</a></li>
                 <hr />
-                <li><b>Dockerhub:</b> <a href='https://hub.docker.com/r/arken/arken'>arkenproject/arken</a></li>
+                <li><b>Dockerhub:</b> <a href='https://hub.docker.com/r/arkenproject/arken'>arkenproject/arken</a></li>
               </ul>
             </div>
           </div>
